# databricks_examples

./: .gitignore  GETTING_STARTED.md  README.md  databricks.yml  pyproject.toml  run_python_cmds.bat  setup_python_env.bat
.github/workflows/: test-uv-environment.yml  validate-dependency-alignment.yml
docs/: workspace-standard.md
notebooks/: hello-world.ipynb
notebooks/bootstrap/: 00_bootstrap_env.py
requirements/: requirements-serverless.txt  requirements-standard.txt  requirements_activitysim_example.txt
resources/jobs/: acitivitysim_summary_example.job.yml  hello_world_example.job.yml  serverless_job_template.yml
resources/pipelines/: hello_world_example.pipeline.yml  serverless_pipeline_template.yml
scripts/: check_requirements_drift.bat  export_requirements.bat
src/: 02_databrick_hello_world.py
src/examples/: 01_local_upload_data.py  03_activitysim_summary_example.py  hello_world_pipeline.sql  main.py  pipeline_main.py
